--- a/src/vbaDeveloper.xlam/EventListener.cls
+++ b/src/vbaDeveloper.xlam/EventListener.cls
@@ -2,12 +2,15 @@ VERSION 1.0 CLASS
 BEGIN
   MultiUse = -1  'True
 END
-Attribute VB_Name = "CExcelEvents"
+Attribute VB_Name = "EventListener"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
 'This class receives and acts upon events from the excel application.
+
+Option Explicit
+
 Private WithEvents App As Application
 Attribute App.VB_VarHelpID = -1
 
@@ -30,7 +33,7 @@ Private Sub App_WorkbookAfterSave(ByVal wb As Workbook, ByVal success As Boolean
    On Error GoTo 0
    Exit Sub
 App_WorkbookAfterSave_Error:
-    ErrorHandling.handleError "vbaDeveloper.CExcelEvents afterSave"
+    ErrorHandling.handleError "vbaDeveloper.EventListener afterSave"
 End Sub
 
 Private Sub App_WorkbookBeforeSave(ByVal wb As Workbook, ByVal SaveAsUI As Boolean, Cancel As Boolean)
@@ -39,11 +42,10 @@ End Sub
 
 Private Sub App_WorkbookOpen(ByVal wb As Workbook)
    On Error GoTo App_WorkbookOpen_Error
-    debugPrint "vbaDeveloper CExcelEvents App_WorkbookOpen()"
     
     'Import all the modules for this workbook
     Dim importNow As Integer
-    importNow = MsgBox("Import the code for " & wb.name & " now?", vbYesNo, "CExcelEvents Workbook open EVENT")
+    importNow = MsgBox("Import the code for " & wb.name & " now?", vbYesNo, "EventListener Workbook open event")
     If importNow = vbYes Then
         Build.importVbaCode wb.VBProject
     End If
@@ -51,7 +53,7 @@ Private Sub App_WorkbookOpen(ByVal wb As Workbook)
    On Error GoTo 0
    Exit Sub
 App_WorkbookOpen_Error:
-    ErrorHandling.handleError "vbaDeveloper.CExcelEvents WorkbookOpen"
+    ErrorHandling.handleError "vbaDeveloper.EventListener WorkbookOpen"
 End Sub
 
 Private Sub Class_Terminate()
