Create a menu to easily import or export vba code

--- a/src/vbaDeveloper.xlam/ThisWorkbook.sheet.cls
+++ b/src/vbaDeveloper.xlam/ThisWorkbook.sheet.cls
@@ -8,16 +8,16 @@ Private Sub Workbook_Open()
     Debug.Print "vbaDeveloper thisWorkbook_open()"
     Set listener = New EventListener
     Set customAction = New MyCustomActions
+    menu.createMenu
     customAction.afterOpen
 End Sub
 
 ' Clean up our private members
 Private Sub Workbook_BeforeClose(Cancel As Boolean)
     Debug.Print "vbaDeveloper thisWorkbook_BeforeClose()"
+    menu.deleteMenu
     customAction.beforeClose
     Set customAction = Nothing
     Set listener = Nothing
 End Sub
-
-    
     
