--- a/src/vbaDeveloper.xlam/EventListener.cls
+++ b/src/vbaDeveloper.xlam/EventListener.cls
@@ -11,6 +11,7 @@ Attribute VB_Exposed = False
 
 Option Explicit
 
+
 Private WithEvents App As Application
 Attribute App.VB_VarHelpID = -1
 
@@ -21,17 +22,18 @@ End Sub
 
 Private Sub App_WorkbookAfterSave(ByVal wb As Workbook, ByVal success As Boolean)
     On Error GoTo App_WorkbookAfterSave_Error
-
-    'Export all the modules for this work book if save was successful
-    If success Then
-        Formatter.formatProject wb.VBProject
-        Build.exportVbaCode wb.VBProject
-        NamedRanges.exportNamedRanges wb
-        MsgBox "Finished saving workbook: " & wb.name & " . Code is exported."
-    Else
-        MsgBox "Saving workbook: " & wb.name & " was not successful. Code is not exported."
+    
+    If AUTO_SAVE = "Yes" Then   'This is set manually in the 'Build' macro so that users can choose whether they want autosave enabled.
+        'Export all the modules for this work book if save was successful
+        If success Then
+            Formatter.formatProject wb.VBProject
+            Build.exportVbaCode wb.VBProject
+            NamedRanges.exportNamedRanges wb
+            MsgBox "Finished saving workbook: " & wb.name & " . Code is exported."
+        End If
     End If
-
+    
+    
     On Error GoTo 0
     Exit Sub
 App_WorkbookAfterSave_Error:
@@ -45,12 +47,14 @@ End Sub
 Private Sub App_WorkbookOpen(ByVal wb As Workbook)
     On Error GoTo App_WorkbookOpen_Error
 
-    'Import all the modules for this workbook
-    Dim importNow As Integer
-    importNow = MsgBox("Import the code for " & wb.name & " now?", vbYesNo, "EventListener Workbook open event")
-    If importNow = vbYes Then
-        Build.importVbaCode wb.VBProject
-        NamedRanges.importNamedRanges wb
+    If AUTO_SAVE = "Yes" Then   'This is set manually in the 'Build' macro so that users can choose whether they want autosave enabled.
+        'Import all the modules for this workbook
+        Dim importNow As Integer
+        importNow = MsgBox("Import the code for " & wb.name & " now?", vbYesNo, "EventListener Workbook open event")
+        If importNow = vbYes Then
+            Build.importVbaCode wb.VBProject
+            NamedRanges.importNamedRanges wb
+        End If
     End If
 
     On Error GoTo 0
