--- a/src/vbaDeveloper.xlam/EventListener.cls
+++ b/src/vbaDeveloper.xlam/EventListener.cls
@@ -7,9 +7,10 @@ Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
-'This class receives and acts upon events from the excel application.
-
 Option Explicit
+
+'This class receives and acts upon events from the excel application.
+' To disable this eventhandling, simply don't instantiate this class. See Thisworkbook.
 
 
 Private WithEvents App As Application
@@ -20,49 +21,50 @@ Private Sub Class_Initialize()
     Set App = Application
 End Sub
 
+
 Private Sub App_WorkbookAfterSave(ByVal wb As Workbook, ByVal success As Boolean)
     On Error GoTo App_WorkbookAfterSave_Error
-    
-    If AUTO_SAVE = "Yes" Then   'This is set manually in the 'Build' macro so that users can choose whether they want autosave enabled.
-        'Export all the modules for this work book if save was successful
-        If success Then
-            Formatter.formatProject wb.VBProject
-            Build.exportVbaCode wb.VBProject
-            NamedRanges.exportNamedRanges wb
-            MsgBox "Finished saving workbook: " & wb.name & " . Code is exported."
-        End If
+
+    'Export all the modules for this work book if save was successful
+    If success Then
+        Build.exportVbaCode wb.VBProject
+        NamedRanges.exportNamedRanges wb
+        MsgBox "Finished saving workbook: " & wb.name & " . Code is exported."
+    Else
+        MsgBox "Saving workbook: " & wb.name & " was not successful. Code is not exported."
     End If
-    
-    
-    On Error GoTo 0
+
     Exit Sub
 App_WorkbookAfterSave_Error:
     ErrorHandling.handleError "vbaDeveloper.EventListener afterSave"
 End Sub
 
+
 Private Sub App_WorkbookBeforeSave(ByVal wb As Workbook, ByVal SaveAsUI As Boolean, Cancel As Boolean)
-    'MsgBox "Before saving workbook: " & wb.name & " (cancel is " & Cancel
+    If Not Cancel Then
+        Formatter.formatProject wb.VBProject
+    End If
 End Sub
+
 
 Private Sub App_WorkbookOpen(ByVal wb As Workbook)
     On Error GoTo App_WorkbookOpen_Error
 
-    If AUTO_SAVE = "Yes" Then   'This is set manually in the 'Build' macro so that users can choose whether they want autosave enabled.
-        'Import all the modules for this workbook
-        Dim importNow As Integer
-        importNow = MsgBox("Import the code for " & wb.name & " now?", vbYesNo, "EventListener Workbook open event")
-        If importNow = vbYes Then
-            Build.importVbaCode wb.VBProject
-            NamedRanges.importNamedRanges wb
-        End If
+    'Import all the modules for this workbook
+    Dim importNow As Integer
+    importNow = MsgBox("Import the code for " & wb.name & " now?", vbYesNo, "EventListener Workbook open event")
+    If importNow = vbYes Then
+        Build.importVbaCode wb.VBProject
+        NamedRanges.importNamedRanges wb
     End If
 
-    On Error GoTo 0
     Exit Sub
 App_WorkbookOpen_Error:
     ErrorHandling.handleError "vbaDeveloper.EventListener WorkbookOpen"
 End Sub
 
+
 Private Sub Class_Terminate()
     Set App = Nothing
 End Sub
+
